update: scrollbar fixed 🖱

--- a/src/index.css
+++ b/src/index.css
@@ -39,19 +39,21 @@ a {
 
 /* SCROLLBAR */
 
-#style-1::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: transparent;
-}
-
-#style-1::-webkit-scrollbar {
-    width: 8px;
-    background-color: transparent;
-}
-
-#style-1::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: var(--scrollbar);
+@media (min-width: 1024px) {
+    #scroll::-webkit-scrollbar-track {
+        border-radius: 10px;
+        background-color: transparent;
+    }
+    
+    #scroll::-webkit-scrollbar {
+        width: 8px;
+        background-color: transparent;
+    }
+    
+    #scroll::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: var(--scrollbar);
+    }
 }
 
 /* ANIMATIONS */
